# Micro-Vector-Editor

./: CMakeLists.txt  README.md
src/: main.cpp
src/canvas/: canvas.h  canvas_clipboard.cpp  canvas_commands.cpp  canvas_core.cpp  canvas_factory.cpp  canvas_internals.cpp  canvas_mouse_logic_1.cpp  canvas_mouse_logic_2.cpp  canvas_transform.cpp  canvas_utils.cpp
src/commands/: add_shape_command.cpp  add_shape_command.h  change_color_command.cpp  change_color_command.h  commands.h  delete_shape_command.cpp  delete_shape_command.h  transform_command.cpp  transform_command.h
src/graphics/: graphics_object.cpp  graphics_object.h
src/parser/: parser.h  parser_circle.cpp  parser_hexagon.cpp  parser_io.cpp  parser_line.cpp  parser_polyline.cpp  parser_rectangle.cpp  parser_text.cpp  parser_utils.cpp
src/shapes/: circle.h  circle_core.cpp  circle_logic.cpp  hexagon.h  hexagon_core.cpp  hexagon_logic.cpp  line.cpp  line.h  polyline.h  polyline_core.cpp  polyline_logic.cpp  rectangle.cpp  rectangle.h  rounded_rectangle.cpp  rounded_rectangle.h  text.cpp  text.h
src/tools/: tool_type.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow_left_toolbar.cpp  mainwindow_top_toolbar.cpp
